@@ -806,7 +806,7 @@ replace restart {
 	cp	a, %2
 	jrc	%3
 	; peephole 42 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ld	a, %1
@@ -818,7 +818,7 @@ replace restart {
 	cp	a, %2
 	jrslt	%3
 	; peephole 43 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ld	a, %1
@@ -830,7 +830,7 @@ replace restart {
 	cp	a, %2
 	jrsle	%3
 	; peephole 44 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ld	a, %1
@@ -842,7 +842,7 @@ replace restart {
 	cp	a, %2
 	jrule	%3
 	; peephole 45 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ldw	x, %1
@@ -854,7 +854,7 @@ replace restart {
 	cpw	x, %2
 	jrc	%3
 	; peephole 46 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ldw	x, %1
@@ -866,7 +866,7 @@ replace restart {
 	cpw	x, %2
 	jrslt	%3
 	; peephole 47 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ldw	x, %1
@@ -878,7 +878,7 @@ replace restart {
 	cpw	x, %2
 	jrsle	%3
 	; peephole 48 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ldw	x, %1
@@ -890,7 +890,7 @@ replace restart {
 	cpw	x, %2
 	jrule	%3
 	; peephole 49 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('c'), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ldw	x, %1
@@ -902,7 +902,7 @@ replace restart {
 	cpw	x, %2
 	jrnc	%3
 	; peephole 50 removed redundant load of a from %1.
-} if notVolatile(%1), notUsed('z')
+} if notVolatile(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ldw	x, %1
